# pavlok-touch-grass

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: capture-widget.mjs  release-version.mjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
