[package]
name = "pavlok-touch-grass"
version = "1.0.0"
description = "Pavlok: Touch Grass"
authors = ["you"]
edition = "2021"

[lib]
name = "pavlok_touch_grass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
winapi = { version = "0.3.9", features = ["winuser", "sysinfoapi"] }
uuid = { version = "1.2", features = ["v4"] }
raw-window-handle = "0.6.2"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Controls", "Win32_UI_Shell", "Win32_Graphics_Dwm", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_LibraryLoader"] }
